Refactor: Modernize codebase by removing unused methods, improving API compatibility, and simplifying HTML styles.